--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -63,6 +63,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PAT }}
         run: |
           git config --global credential.helper '!f() { sleep 1; echo "username=git token=${{ secrets.PAT }}"; }; f'
+          git config --global --add url."https://${{ secrets.PAT }}:x-oauth-basic@github".insteadOf ssh://git@github
+          git config --global --add url."https://${{ secrets.PAT }}:x-oauth-basic@github".insteadOf https://github
+          git config --global --add url."https://${{ secrets.PAT }}:x-oauth-basic@github".insteadOf git@github
           git push --force --follow-tags
           # git push origin $(git rev-parse --abbrev-ref HEAD)
           # . ./version.sh
