--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -66,7 +66,8 @@ jobs:
           git config --global --add url."https://${{ secrets.PAT }}:x-oauth-basic@github".insteadOf ssh://git@github
           git config --global --add url."https://${{ secrets.PAT }}:x-oauth-basic@github".insteadOf https://github
           git config --global --add url."https://${{ secrets.PAT }}:x-oauth-basic@github".insteadOf git@github
-          git push --force --follow-tags
+          git push --force origin $(git rev-parse --abbrev-ref HEAD)
+          # git push --force --follow-tags
           # git push origin $(git rev-parse --abbrev-ref HEAD)
-          # . ./version.sh
-          # git push origin $PARTCAD_VERSION
+          . ./version.sh
+          git push origin $PARTCAD_VERSION
