--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -8,8 +8,8 @@ jobs:
   update_version_and_tag:
     runs-on: ubuntu-latest
     if:
-      !startsWith(github.event.head_commit.message , '[SKIP]') &&
-      !startsWith(github.event.head_commit.message , 'Version updated')
+      "!startsWith(github.event.head_commit.message, '[SKIP]') &&
+      !startsWith(github.event.head_commit.message, 'Version updated')"
     environment:
       name: CD
 
